@@ -1,10 +1,10 @@
 package tqs.sparkflow.userservice.service;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -15,6 +15,8 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import tqs.sparkflow.userservice.dto.UserCreateDTO;
+import tqs.sparkflow.userservice.dto.UserUpdateDTO;
 import tqs.sparkflow.userservice.exception.DuplicateEmailException;
 import tqs.sparkflow.userservice.exception.ResourceNotFoundException;
 import tqs.sparkflow.userservice.model.User;
@@ -30,152 +32,148 @@ class UserServiceTest {
     private UserService userService;
 
     private User testUser;
+    private UserCreateDTO createDTO;
+    private UserUpdateDTO updateDTO;
 
     @BeforeEach
     void setUp() {
         testUser = new User("testuser", "test@example.com", "password123");
         testUser.setId("1");
+        testUser.setOperator(false);
+
+        createDTO = new UserCreateDTO();
+        createDTO.setUsername("newuser");
+        createDTO.setEmail("new@example.com");
+        createDTO.setPassword("password123");
+        createDTO.setOperator(false);
+
+        updateDTO = new UserUpdateDTO();
+        updateDTO.setUsername("updateduser");
+        updateDTO.setEmail("updated@example.com");
+        updateDTO.setPassword("newpassword");
+        updateDTO.setOperator(true);
     }
 
     @Test
     void whenCreateUser_thenReturnCreatedUser() {
-        when(userRepository.existsByEmail(testUser.getEmail())).thenReturn(false);
-        when(userRepository.save(any(User.class))).thenReturn(testUser);
+        when(userRepository.existsByEmail(createDTO.getEmail())).thenReturn(false);
+        when(userRepository.save(any(User.class))).thenAnswer(i -> i.getArgument(0));
 
-        User createdUser = userService.createUser(testUser);
+        User createdUser = userService.createUser(createDTO);
 
-        assertNotNull(createdUser);
-        assertEquals(testUser.getId(), createdUser.getId());
-        assertEquals(testUser.getUsername(), createdUser.getUsername());
-        assertEquals(testUser.getEmail(), createdUser.getEmail());
-        verify(userRepository).save(any(User.class));
+        assertThat(createdUser.getUsername()).isEqualTo(createDTO.getUsername());
+        assertThat(createdUser.getEmail()).isEqualTo(createDTO.getEmail());
+        assertThat(createdUser.getPassword()).isEqualTo(createDTO.getPassword());
+        assertThat(createdUser.isOperator()).isEqualTo(createDTO.isOperator());
     }
 
     @Test
     void whenCreateUserWithExistingEmail_thenThrowException() {
-        when(userRepository.existsByEmail(testUser.getEmail())).thenReturn(true);
+        when(userRepository.existsByEmail(createDTO.getEmail())).thenReturn(true);
 
-        assertThrows(DuplicateEmailException.class, () -> userService.createUser(testUser));
-        verify(userRepository, never()).save(any(User.class));
+        assertThatThrownBy(() -> userService.createUser(createDTO))
+                .isInstanceOf(DuplicateEmailException.class)
+                .hasMessageContaining("Email already exists");
     }
 
     @Test
     void whenGetUserById_thenReturnUser() {
-        when(userRepository.findById("1")).thenReturn(Optional.of(testUser));
+        when(userRepository.findById(testUser.getId())).thenReturn(Optional.of(testUser));
 
-        User foundUser = userService.getUserById("1");
+        User foundUser = userService.getUserById(testUser.getId());
 
-        assertNotNull(foundUser);
-        assertEquals(testUser.getId(), foundUser.getId());
+        assertThat(foundUser).isEqualTo(testUser);
     }
 
     @Test
     void whenGetUserByIdNotFound_thenThrowException() {
-        when(userRepository.findById("1")).thenReturn(Optional.empty());
+        when(userRepository.findById("nonexistent")).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> userService.getUserById("1"));
+        assertThatThrownBy(() -> userService.getUserById("nonexistent"))
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("User not found");
     }
 
     @Test
     void whenGetUserByEmail_thenReturnUser() {
-        when(userRepository.findByEmail("test@example.com")).thenReturn(Optional.of(testUser));
+        when(userRepository.findByEmail(testUser.getEmail())).thenReturn(Optional.of(testUser));
 
-        User foundUser = userService.getUserByEmail("test@example.com");
+        User foundUser = userService.getUserByEmail(testUser.getEmail());
 
-        assertNotNull(foundUser);
-        assertEquals(testUser.getEmail(), foundUser.getEmail());
+        assertThat(foundUser).isEqualTo(testUser);
     }
 
     @Test
     void whenGetUserByEmailNotFound_thenThrowException() {
         when(userRepository.findByEmail("nonexistent@example.com")).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> userService.getUserByEmail("nonexistent@example.com"));
+        assertThatThrownBy(() -> userService.getUserByEmail("nonexistent@example.com"))
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("User not found");
     }
 
     @Test
     void whenUpdateUser_thenReturnUpdatedUser() {
-        User updatedUser = new User("updateduser", "test@example.com", "newpassword");
-        updatedUser.setId("1");
+        when(userRepository.findById(testUser.getId())).thenReturn(Optional.of(testUser));
+        when(userRepository.findByEmail(updateDTO.getEmail())).thenReturn(Optional.empty());
+        when(userRepository.save(any(User.class))).thenAnswer(i -> i.getArgument(0));
 
-        when(userRepository.findById("1")).thenReturn(Optional.of(testUser));
-        when(userRepository.findByEmail("test@example.com")).thenReturn(Optional.of(testUser));
-        when(userRepository.save(any(User.class))).thenReturn(updatedUser);
+        User updatedUser = userService.updateUser(testUser.getId(), updateDTO);
 
-        User result = userService.updateUser("1", updatedUser);
-
-        assertNotNull(result);
-        assertEquals(updatedUser.getUsername(), result.getUsername());
-        verify(userRepository).save(any(User.class));
-    }
-
-    @Test
-    void whenUpdateUserWithNewEmail_thenReturnUpdatedUser() {
-        User updatedUser = new User("updateduser", "new@example.com", "newpassword");
-        updatedUser.setId("1");
-
-        when(userRepository.findById("1")).thenReturn(Optional.of(testUser));
-        when(userRepository.findByEmail("new@example.com")).thenReturn(Optional.empty());
-        when(userRepository.save(any(User.class))).thenReturn(updatedUser);
-
-        User result = userService.updateUser("1", updatedUser);
-
-        assertNotNull(result);
-        assertEquals(updatedUser.getEmail(), result.getEmail());
-        verify(userRepository).save(any(User.class));
+        assertThat(updatedUser.getUsername()).isEqualTo(updateDTO.getUsername());
+        assertThat(updatedUser.getEmail()).isEqualTo(updateDTO.getEmail());
+        assertThat(updatedUser.getPassword()).isEqualTo(updateDTO.getPassword());
+        assertThat(updatedUser.isOperator()).isEqualTo(updateDTO.isOperator());
     }
 
     @Test
     void whenUpdateUserWithExistingEmail_thenThrowException() {
-        User updatedUser = new User("updateduser", "existing@example.com", "newpassword");
-        updatedUser.setId("1");
-        User existingUser = new User("existinguser", "existing@example.com", "password123");
-        existingUser.setId("2");
+        User anotherUser = new User("anotheruser", "another@example.com", "password123");
+        anotherUser.setId("2");
 
-        when(userRepository.findById("1")).thenReturn(Optional.of(testUser));
-        when(userRepository.findByEmail("existing@example.com")).thenReturn(Optional.of(existingUser));
+        when(userRepository.findById(testUser.getId())).thenReturn(Optional.of(testUser));
+        when(userRepository.findByEmail(updateDTO.getEmail())).thenReturn(Optional.of(anotherUser));
 
-        assertThrows(DuplicateEmailException.class, () -> userService.updateUser("1", updatedUser));
-        verify(userRepository, never()).save(any(User.class));
+        assertThatThrownBy(() -> userService.updateUser(testUser.getId(), updateDTO))
+                .isInstanceOf(DuplicateEmailException.class)
+                .hasMessageContaining("Email already exists");
     }
 
     @Test
-    void whenDeleteUser_thenSuccess() {
-        when(userRepository.existsById("1")).thenReturn(true);
-        doNothing().when(userRepository).deleteById("1");
+    void whenUpdateUserNotFound_thenThrowException() {
+        when(userRepository.findById("nonexistent")).thenReturn(Optional.empty());
 
-        userService.deleteUser("1");
+        assertThatThrownBy(() -> userService.updateUser("nonexistent", updateDTO))
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("User not found");
+    }
 
-        verify(userRepository).deleteById("1");
+    @Test
+    void whenDeleteUser_thenUserIsDeleted() {
+        when(userRepository.existsById(testUser.getId())).thenReturn(true);
+        doNothing().when(userRepository).deleteById(testUser.getId());
+
+        userService.deleteUser(testUser.getId());
+
+        verify(userRepository).deleteById(testUser.getId());
     }
 
     @Test
     void whenDeleteUserNotFound_thenThrowException() {
-        when(userRepository.existsById("1")).thenReturn(false);
+        when(userRepository.existsById("nonexistent")).thenReturn(false);
 
-        assertThrows(ResourceNotFoundException.class, () -> userService.deleteUser("1"));
-        verify(userRepository, never()).deleteById(any());
+        assertThatThrownBy(() -> userService.deleteUser("nonexistent"))
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("User not found");
     }
 
     @Test
     void whenGetAllUsers_thenReturnUserList() {
-        List<User> users = Arrays.asList(testUser);
+        List<User> users = List.of(testUser);
         when(userRepository.findAll()).thenReturn(users);
 
         List<User> foundUsers = userService.getAllUsers();
 
-        assertNotNull(foundUsers);
-        assertEquals(1, foundUsers.size());
-        assertEquals(testUser.getId(), foundUsers.get(0).getId());
-    }
-
-    @Test
-    void whenGetAllUsersEmpty_thenReturnEmptyList() {
-        when(userRepository.findAll()).thenReturn(Arrays.asList());
-
-        List<User> foundUsers = userService.getAllUsers();
-
-        assertNotNull(foundUsers);
-        assertTrue(foundUsers.isEmpty());
+        assertThat(foundUsers).isEqualTo(users);
     }
 } 
